--- a/src/EP.CursoMvc.Infra.CrossCutting.Filters/EP.CursoMvc.Infra.CrossCutting.Filters.csproj
+++ b/src/EP.CursoMvc.Infra.CrossCutting.Filters/EP.CursoMvc.Infra.CrossCutting.Filters.csproj
@@ -9,9 +9,10 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>EP.CursoMvc.Infra.CrossCutting.Filters</RootNamespace>
     <AssemblyName>EP.CursoMvc.Infra.CrossCutting.Filters</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
